@startuml Observer Pattern - ElementarClash

!define ABSTRACT_CLASS abstract class
!define INTERFACE interface

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
    BackgroundColor<<Observer>> LightYellow
    BorderColor<<Observer>> DarkOrange
    BackgroundColor<<ConcreteObserver>> LightBlue
    BorderColor<<ConcreteObserver>> DarkBlue
    BackgroundColor<<Event>> LightGreen
    BorderColor<<Event>> DarkGreen
    BackgroundColor<<Subject>> Wheat
    BorderColor<<Subject>> Brown
}

' ===== Observer Interface =====
INTERFACE GameObserver <<Observer>> {
    + onEvent(event: GameEvent): void
}

' ===== Event Base Class =====
ABSTRACT_CLASS GameEvent <<Event>> {
    - timestamp: long
    __
    # GameEvent()
    __
    + {abstract} getEventType(): EventType
    + {abstract} getDescription(): String
    + getTimestamp(): long
}

' ===== Event Type Enum =====
enum EventType {
    UNIT_MOVED
    UNIT_ATTACKED
    UNIT_DIED
    TERRAIN_CHANGED
    TURN_STARTED
    TURN_ENDED
    GAME_STARTED
    GAME_OVER
}

' ===== Concrete Event (exemplarisch) =====
class UnitMovedEvent <<Event>> {
    - unit: Unit
    - from: Position
    - to: Position
    __
    + UnitMovedEvent(unit, from, to)
    + getEventType(): EventType
    + getDescription(): String
}

' ===== Concrete Observer (exemplarisch) =====
class ConsoleGameRenderer <<ConcreteObserver>> {
    __
    + onEvent(event: GameEvent): void
    - handleUnitMoved(event: UnitMovedEvent): void
    - handleUnitAttacked(event: UnitAttackedEvent): void
    - handleUnitDeath(event: UnitDeathEvent): void
    - handleTerrainChanged(event: TerrainChangedEvent): void
    - handleTurnStarted(event: TurnStartedEvent): void
    - handleTurnEnded(event: TurnEndedEvent): void
    - handleGameStarted(event: GameStartedEvent): void
    - handleGameOver(event: GameOverEvent): void
}

' ===== Subject =====
class Game <<Subject>> {
    - observers: List<GameObserver>
    __
    + addObserver(observer: GameObserver): void
    + removeObserver(observer: GameObserver): void
    + notifyObservers(event: GameEvent): void
    + notifyTerrainChanged(pos: Position, old: Terrain, new: Terrain): void
}

' ===== Inheritance =====
GameEvent <|-- UnitMovedEvent
GameObserver <|.. ConsoleGameRenderer
GameEvent ..> EventType : <<uses>>

' ===== Associations =====
Game o-right-> "0..*" GameObserver : observers
Game ..> GameEvent : <<creates & dispatches>>

@enduml
